--- a/css/screen.css
+++ b/css/screen.css
@@ -123,14 +123,24 @@ nav ul p > a{
 	display: block;
     width:200px;
     height:150px;
-    background-color: blue;
     color: white;
+    z-index: 1;
 }
 
 .stickyContent{
     width:180px;
     height:120px;
     margin: 0 auto;
+}
+
+.stickyDate{
+	color: black;
+	margin-top:3px;
+}
+
+.stickyCreator{
+	color: black;
+
 }
 
 
