--- a/css/screen.css
+++ b/css/screen.css
@@ -86,7 +86,6 @@ nav ul .sans a:visited{
 
 nav ul p{
 	margin-top: -30px;
-	font-size: 3em;
 	margin-right: 20px;
 	float: right;
 }
@@ -113,7 +112,7 @@ nav ul p > a{
     width:944px;
     height:536px;
     background-image: url('../images/test.jpg');
-    margin-left:100px;
+    margin-left:-50px;
     margin-top:50px;
 }
 
@@ -141,6 +140,34 @@ nav ul p > a{
 .stickyCreator{
 	color: black;
 
+}
+
+.stickyDeleteButton{
+	width:50px;
+	height:10px;
+	color:black;
+}
+
+.postitform{
+	float: right;
+	margin-top: 50px;
+	color: white;
+}
+
+.postitform  h1{
+	font-size: 2em;
+	margin-bottom: 20px;
+	margin-left: 10px;
+}
+
+.postitform > form input[type=file]{
+	display: inline;
+
+}
+
+.postitform label[for=addTitle]{
+	margin-top: 10px;
+	
 }
 
 
