--- a/css/screen.css
+++ b/css/screen.css
@@ -42,6 +42,7 @@ body{
 .container{
 	width: 900px;
 	margin: 0 auto;
+
 }
 
 .schreef{
@@ -124,6 +125,14 @@ nav ul p > a{
     height:150px;
     color: white;
     z-index: 1;
+
+    /* Disable text selectie */	
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .stickyContent{
