--- a/css/screen.css
+++ b/css/screen.css
@@ -161,7 +161,7 @@ margin-top: 50px;
 }
 
 .project-view{
-	width: 200px;
+	width: 500px;
 	margin: 0 auto;
 	text-align: center;
 	margin-top: -30px;
@@ -333,5 +333,9 @@ input[type="color"]{
 .alert-success{
 	color: #3fad75;
 	border: 1px solid #3fad75 ;
+	position:fixed;
+	margin: 0 auto;
+	width:500px;
+	height:25px;
 }
 
